--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -12,6 +12,18 @@
   <!--<link rel="stylesheet" href="http://getbootstrap.com.vn/examples/equal-height-columns/equal-height-columns.css"/>-->
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class="loader">
+		<div class="item-1"><span></span></div>
+		<div class="item-2"><span></span></div>
+		<div class="item-3"><span></span></div>
+		<div class="item-4"><span></span></div>
+		<div class="item-5"><span></span></div>
+		<div class="item-6"><span></span></div>
+		<div class="item-7"><span></span></div>
+		<div class="item-8"><span></span></div>
+	</div>
+  </app-root>
+  </app-root>
 </body>
 </html>
