--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -15,6 +15,7 @@
 
   <!-- Setting the right viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 </head>
 <body>
   <app-root>
