--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -18,28 +18,18 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <meta property="fb:app_id" content="1507775342583895" />
   <meta property="fb:admins" content="100003176800774" />
-  <meta property="fb:admins" content="{YOUR_FACEBOOK_USER_ID_2}" />
+  <meta property="fb:admins" content="100003032668839" />
 </head>
 
 <body>
   <div id="fb-root"></div>
   <script>
-    window.fbAsyncInit = function () {
-      FB.init({
-        appId: '1507775342583895',
-        xfbml: true,
-        version: 'v2.8'
-      });
-    };
-
     (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) {
-        return;
-      }
+      if (d.getElementById(id)) return;
       js = d.createElement(s);
       js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js";
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.8&appId=1507775342583895";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 
