--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -20,7 +20,9 @@
   <meta property="fb:app_id" content="1507775342583895" />
   <meta property="fb:admins" content="100003176800774" />
   <meta property="fb:admins" content="{YOUR_FACEBOOK_USER_ID_2}" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
 </head>
+
 <body>
   <div id="fb-root"></div>
   <script>
