--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.bundle.min.js"></script>
   <script src="assets/js/ckeditor/ckeditor.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 </head>
 <body>
   <app-root>
