--- a/frontEnd/src/index.html
+++ b/frontEnd/src/index.html
@@ -12,6 +12,7 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Latest compiled and minified JavaScript -->
+  <script src="https://cdn.auth0.com/js/auth0/8.0.4/auth0.min.js"></script>
   <script src="//cdn.auth0.com/js/lock/10.2.2/lock.min.js"></script>
 </head>
 
